openshift/doosan-poc-fuse-dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
  labels:
    app: doosan-poc-fuse
    provider: fabric8
    version: "latest"
    group: com.redhat
  name: doosan-poc-fuse
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: doosan-poc-fuse
    provider: fabric8
    group: com.redhat
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=doosan-poc-fuse&var-version=latest
      labels:
        app: doosan-poc-fuse
        provider: fabric8
        version: "latest"
        group: com.redhat
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":2, "worker-threads":32 }}}'
        - name: GOOGLE_API_HOST
          value: vision.googleapis.com
        - name: GOOGLE_API_KEY
          value: AIzaSyCTK8TCA0-czKXZieYrgfZV5Qt2YSW0Iuk
        - name: AZURE_API_HOST
          value: westcentralus.api.cognitive.microsoft.com
        - name: AZURE_API_KEY
          value: 7a406668b7f64765bd8845d9a791478a
        - name: WATSON_API_HOST
          value: gateway.watsonplatform.net
        - name: WATSON_API_KEY
          value: hSnmMEPybSDVLsZuqZ14KJfiCi3QZ0Ij3ZdmJFmcXxlJ
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: AWS_ACCESS_KEY
          value: AKIAILJZDAV6RHPUSRGQ
        - name: AWS_SECRET_KEY
          value: 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
        - name: AWS_S3_REGION
          value: AP_NORTHEAST_2
        - name: AWS_S3_BUCKET_NAME
          value: poc.doosan
        - name: AWS_S3_OBJECT_HOST
          value: s3.ap-northeast-2.amazonaws.com/poc.doosan
        image: doosan-poc-fuse:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 512Mi
          requests:
            cpu: "0.2"
            memory: 512Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: doosan-poc-fuse:latest
    type: ImageChange
