openshift/doosan-poc-fuse-openshift.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    name: doosan-poc-fuse
- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: doosan-poc-fuse
    labels:
      app: doosan-poc-fuse
      group: com.redhat
      provider: fabric8
      version: '1.0'
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: 'doosan-poc-fuse:latest'
    source:
      type: Git
      git:
        uri: "http://gogs.51.15.56.81.nip.io/gogs/doosan-poc-fuse.git"
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: 'jboss-fuse70-java-openshift:1.0'
          namespace: openshift
      type: Source
    triggers:
    - type: GitHub
      github:
        secret: h_YU4ZQEAFL2J-kus6DD
    - type: Generic
      generic:
        secret: sGW6f3VLdVOfMJyv-8C_
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      prometheus.io/scrape: "true"
      prometheus.io/port: "9779"
    labels:
      expose: "true"
      app: doosan-poc-fuse
      provider: fabric8
      version: "latest"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: doosan-poc-fuse
      provider: fabric8
      group: com.redhat
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
    labels:
      app: doosan-poc-fuse
      provider: fabric8
      version: "latest"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: doosan-poc-fuse
      provider: fabric8
      group: com.redhat
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/iconUrl: img/icons/camel.svg
          fabric8.io/git-branch: master
        labels:
          app: doosan-poc-fuse
          provider: fabric8
          version: "latest"
          group: com.redhat
      spec:
        containers:
        - env:
          - name: SPRING_APPLICATION_JSON
            value: '{"server":{"undertow":{"io-threads":2, "worker-threads":32 }}}'
          - name: GOOGLE_API_HOST
            value: vision.googleapis.com
          - name: GOOGLE_API_KEY
            value: AIzaSyCTK8TCA0-czKXZieYrgfZV5Qt2YSW0Iuk
          - name: AZURE_API_HOST
            value: westcentralus.api.cognitive.microsoft.com
          - name: AZURE_API_KEY
            value: 7a406668b7f64765bd8845d9a791478a
          - name: WATSON_API_HOST
            value: gateway.watsonplatform.net
          - name: WATSON_API_KEY
            value: hSnmMEPybSDVLsZuqZ14KJfiCi3QZ0Ij3ZdmJFmcXxlJ
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: AWS_ACCESS_KEY
            value: AKIAILJZDAV6RHPUSRGQ
          - name: AWS_SECRET_KEY
            value: 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
          - name: AWS_S3_REGION
            value: AP_NORTHEAST_2
          - name: AWS_S3_BUCKET_NAME
            value: poc.doosan
          - name: AWS_S3_OBJECT_HOST
            value: s3.ap-northeast-2.amazonaws.com/poc.doosan
          image: doosan-poc-fuse:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "1.0"
              memory: 512Mi
            requests:
              cpu: "0.2"
              memory: 512Mi
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: doosan-poc-fuse:latest
      type: ImageChange
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: doosan-poc-fuse
      provider: fabric8
      version: "latest"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: doosan-poc-fuse
