openshift/doosan-poc-fuse-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: doosan-poc-fuse
    provider: fabric8
    version: "1.0"
    group: com.redhat
  name: doosan-poc-fuse
spec:
  host: doosan-api.51.15.56.81.nip.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: doosan-poc-fuse
