openshift/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/git-commit: e1271bcc417db11f5c20c6d3b19fc68e28fecd33
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      prometheus.io/scrape: "true"
      prometheus.io/port: "9779"
    labels:
      expose: "true"
      app: doosan-poc-fuse
      provider: fabric8
      version: "1.0"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: doosan-poc-fuse
      provider: fabric8
      group: com.redhat
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/git-commit: e1271bcc417db11f5c20c6d3b19fc68e28fecd33
      fabric8.io/iconUrl: img/icons/camel.svg
      fabric8.io/git-branch: master
      fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=doosan-poc-fuse&var-version=1.0
    labels:
      app: doosan-poc-fuse
      provider: fabric8
      version: "1.0"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: doosan-poc-fuse
      provider: fabric8
      group: com.redhat
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/git-commit: e1271bcc417db11f5c20c6d3b19fc68e28fecd33
          fabric8.io/iconUrl: img/icons/camel.svg
          fabric8.io/git-branch: master
          fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=doosan-poc-fuse&var-version=1.0
        labels:
          app: doosan-poc-fuse
          provider: fabric8
          version: "1.0"
          group: com.redhat
      spec:
        containers:
        - env:
          - name: SPRING_APPLICATION_JSON
            value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
          - name: GOOGLE_API_HOST
            value: vision.googleapis.com
          - name: GOOGLE_API_KEY
            value: AIzaSyCTK8TCA0-czKXZieYrgfZV5Qt2YSW0Iuk
          - name: AZURE_API_HOST
            value: westcentralus.api.cognitive.microsoft.com
          - name: AZURE_API_KEY
            value: 7a406668b7f64765bd8845d9a791478a
          - name: WATSON_API_HOST
            value: gateway.watsonplatform.net
          - name: WATSON_API_KEY
            value: hSnmMEPybSDVLsZuqZ14KJfiCi3QZ0Ij3ZdmJFmcXxlJ
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: doosan-poc-fuse:1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "1.0"
              memory: 256Mi
            requests:
              cpu: "0.2"
              memory: 256Mi
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: doosan-poc-fuse:1.0
      type: ImageChange
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: doosan-poc-fuse
      provider: fabric8
      version: "1.0"
      group: com.redhat
    name: doosan-poc-fuse
  spec:
    host: doosan-api.51.15.56.81.nip.io
    port:
      targetPort: 8080
    to:
      kind: Service
      name: doosan-poc-fuse
